admission/ValidatingAdmissionPolicy/policies/run-as-group/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: run-as-group-containers
  annotations:
    kubeapt.io/uuid: "37bb1c69-4a89-4758-86cc-1d500f27a7a1"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
    securityContext:
      runAsGroup: 0
